--- a/pages/galeria/galeria.html
+++ b/pages/galeria/galeria.html
@@ -78,7 +78,7 @@
                                     <img src="/resources/images/galeria/salon_mecanica.jpg" alt="" class="gallery-img" />
                                 </a>
                                 <a href="#image2">
-                                    <img src="/resources/images/galeria/mision_vision_valores.jpeg" alt="" class="gallery-img" />
+                                    <img src="/resources/images/galeria/area_robinsonianos.jpeg" alt="" class="gallery-img" />
                                 </a>
                                 <a href="#image3">
                                     <img src="/resources/images/galeria/slider_principal_3.jpg" alt="" class="gallery-img" />
@@ -89,16 +89,43 @@
                                 <a href="#image5">
                                     <img src="/resources/images/galeria/estacionamiento1.jpg" alt="" class="gallery-img" />
                                 </a>
+                                <a href="#image6">
+                                    <img src="/resources/images/galeria/patio_central.jpeg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image7">
+                                    <img src="/resources/images/galeria/entrada1.jpeg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image8">
+                                    <img src="/resources/images/estructura/aulas1.jpeg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image9">
+                                    <img src="/resources/images/estructura/biblioteca1.jpg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image10">
+                                    <img src="/resources/images/estructura/cantina1.jpg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image11">
+                                    <img src="/resources/images/estructura/cancha1.jpg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image12">
+                                    <img src="/resources/images/estructura/comedor1.jpg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image13">
+                                    <img src="/resources/images/estructura/direccion1.jpg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image14">
+                                    <img src="/resources/images/galeria/entrada_salon_cultura.jpeg" alt="" class="gallery-img">
+                                </a>
                             </div>
                             <article class="light-box" id="image1">
-                                <a href="#image5" class="next">Anterior</a>
+                                <a href="#image14" class="next">Anterior</a>
                                 <img src="/resources/images/galeria/salon_mecanica.jpg" alt="">
                                 <a href="#image2" class="next">Siguiente</a>
                                 <a href="#" class="close">X</a>
                             </article>
                             <article class="light-box" id="image2">
                                 <a href="#image1" class="next">Anterior</a>
-                                <img src="/resources/images/galeria/mision_vision_valores.jpeg" alt="">
+                                <img src="/resources/images/galeria/area_robinsonianos.jpeg" alt="">
                                 <a href="#image3" class="next">Siguiente</a>
                                 <a href="#" class="close">X</a>
                             </article>
@@ -117,56 +144,101 @@
                             <article class="light-box" id="image5">
                                 <a href="#image4" class="next">Anterior</a>
                                 <img src="/resources/images/galeria/estacionamiento1.jpg" alt="">
+                                <a href="#image6" class="next">Siguiente</a>
+                                <a href="#" class="close">X</a>
+                            </article>
+                            <article class="light-box" id="image6">
+                                <a href="#image5" class="next">Anterior</a>
+                                <img src="/resources/images/galeria/patio_central.jpeg" alt="">
+                                <a href="#image7" class="next">Siguiente</a>
+                                <a href="#" class="close">X</a>
+                            </article>
+                            <article class="light-box" id="image7">
+                                <a href="#image6" class="next">Anterior</a>
+                                <img src="/resources/images/galeria/entrada1.jpeg" alt="">
+                                <a href="#image8" class="next">Siguiente</a>
+                                <a href="#" class="close">X</a>
+                            </article>
+                            <article class="light-box" id="image8">
+                                <a href="#image7" class="next">Anterior</a>
+                                <img src="/resources/images/estructura/aulas1.jpeg" alt="">
+                                <a href="#image9" class="next">Siguiente</a>
+                                <a href="#" class="close">X</a>
+                            </article>
+                            <article class="light-box" id="image9">
+                                <a href="#image8" class="next">Anterior</a>
+                                <img src="/resources/images/estructura/biblioteca1.jpg" alt="">
+                                <a href="#image10" class="next">Siguiente</a>
+                                <a href="#" class="close">X</a>
+                            </article>
+                            <article class="light-box" id="image10">
+                                <a href="#image9" class="next">Anterior</a>
+                                <img src="/resources/images/estructura/cantina1.jpg" alt="">
+                                <a href="#image11" class="next">Siguiente</a>
+                                <a href="#" class="close">X</a>
+                            </article>
+                            <article class="light-box" id="image11">
+                                <a href="#image10" class="next">Anterior</a>
+                                <img src="/resources/images/estructura/cancha1.jpg" alt="">
+                                <a href="#image12" class="next">Siguiente</a>
+                                <a href="#" class="close">X</a>
+                            </article>
+                            <article class="light-box" id="image12">
+                                <a href="#image11" class="next">Anterior</a>
+                                <img src="/resources/images/estructura/comedor1.jpg" alt="">
+                                <a href="#image13" class="next">Siguiente</a>
+                                <a href="#" class="close">X</a>
+                            </article>
+                            <article class="light-box" id="image13">
+                                <a href="#image12" class="next">Anterior</a>
+                                <img src="/resources/images/estructura/direccion1.jpg" alt="">
+                                <a href="#image14" class="next">Siguiente</a>
+                                <a href="#" class="close">X</a>
+                            </article>
+                            <article class="light-box" id="image14">
+                                <a href="#image13" class="next">Anterior</a>
+                                <img src="/resources/images/galeria/entrada_salon_cultura.jpeg" alt="">
                                 <a href="#image1" class="next">Siguiente</a>
                                 <a href="#" class="close">X</a>
                             </article>
                         </section>
                         <section class="gallery-div">
                             <div class="struc" id="we">
-                                <a href="#image1">
-                                    <img src="/resources/images/galeria/salon_mecanica.jpg" alt="" class="gallery-img" />
+                                <a href="#image15">
+                                    <img src="/resources/images/galeria/dia_alimentacion.jpg" alt="" class="gallery-img" />
                                 </a>
-                                <a href="#image2">
+                                <a href="#image16">
                                     <img src="/resources/images/galeria/mision_vision_valores.jpeg" alt="" class="gallery-img" />
                                 </a>
-                                <a href="#image3">
-                                    <img src="/resources/images/galeria/slider_principal_3.jpg" alt="" class="gallery-img" />
+                                <a href="#image17">
+                                    <img src="/resources/images/galeria/simon_diaz.jpg" alt="" class="gallery-img" />
                                 </a>
-                                <a href="#image4">
-                                    <img src="/resources/images/galeria/slider_principal_1.jpg" alt="" class="gallery-img" />
-                                </a>
-                                <a href="#image5">
-                                    <img src="/resources/images/galeria/estacionamiento1.jpg" alt="" class="gallery-img" />
+                                <a href="#image18">
+                                    <img src="/resources/images/slider_principal_2.jpg" alt="" class="gallery-img" />
                                 </a>
                             </div>
-                            <article class="light-box" id="image1">
-                                <a href="#image5" class="next">Anterior</a>
-                                <img src="/resources/images/galeria/salon_mecanica.jpg" alt="">
-                                <a href="#image2" class="next">Siguiente</a>
+                            <article class="light-box" id="image15">
+                                <a href="#image18" class="next">Anterior</a>
+                                <img src="/resources/images/galeria/dia_alimentacion.jpg" alt="">
+                                <a href="#image16" class="next">Siguiente</a>
                                 <a href="#" class="close">X</a>
                             </article>
-                            <article class="light-box" id="image2">
-                                <a href="#image1" class="next">Anterior</a>
+                            <article class="light-box" id="image16">
+                                <a href="#image15" class="next">Anterior</a>
                                 <img src="/resources/images/galeria/mision_vision_valores.jpeg" alt="">
-                                <a href="#image3" class="next">Siguiente</a>
+                                <a href="#image17" class="next">Siguiente</a>
                                 <a href="#" class="close">X</a>
                             </article>
-                            <article class="light-box" id="image3">
-                                <a href="#image2" class="next">Anterior</a>
-                                <img src="/resources/images/galeria/slider_principal_3.jpg" alt="">
-                                <a href="#image4" class="next">Siguiente</a>
+                            <article class="light-box" id="image17">
+                                <a href="#image16" class="next">Anterior</a>
+                                <img src="/resources/images/galeria/simon_diaz.jpg" alt="">
+                                <a href="#image18" class="next">Siguiente</a>
                                 <a href="#" class="close">X</a>
                             </article>
-                            <article class="light-box" id="image4">
-                                <a href="#image3" class="next">Anterior</a>
-                                <img src="/resources/images/galeria/slider_principal_1.jpg" alt="">
-                                <a href="#image5" class="next">Siguiente</a>
-                                <a href="#" class="close">X</a>
-                            </article>
-                            <article class="light-box" id="image5">
-                                <a href="#image4" class="next">Anterior</a>
-                                <img src="/resources/images/galeria/estacionamiento1.jpg" alt="">
-                                <a href="#image1" class="next">Siguiente</a>
+                            <article class="light-box" id="image18">
+                                <a href="#image17" class="next">Anterior</a>
+                                <img src="/resources/images/slider_principal_2.jpg" alt="">
+                                <a href="#image15" class="next">Siguiente</a>
                                 <a href="#" class="close">X</a>
                             </article>
                             </div>
