"Materias de las Menciones".
Se agregó las materias de cada mención.

--- a/pages/menciones/administracion.html
+++ b/pages/menciones/administracion.html
@@ -77,16 +77,28 @@
                         <p class="text-section">Las materias de la mención de Administración se clasifican en:</p>
                         <ul class="list-section">
                             <p>
-                                <b>4to año: </b
-                                ><!-- todo -->
+                                <b>4to año: </b>
+                                <p>Mecanografía</p>
+                                <p>Contabilidad</p>
+                                <p>Noción del Derecho</p>
+                                <p>Teoría de los Seguros</p>
+                                <p>Tec. Para. Adm</p>
+                                <p>Inst. Pre</p>
                             </p>
                             <p>
-                                <b>5to año: </b
-                                ><!-- todo -->
+                                <b>5to año: </b>
+                                <p>Practica de Oficina</p>
+                                <p>Administración de Nómina</p>
+                                <p>Legis. Lab Merc</p>
+                                <p>Inst. Pre</p>
+                                <p>Tec Prac Menc</p>
                             </p>
                             <p>
-                                <b>6to año: </b
-                                ><!-- todo -->
+                                <b>6to año: </b>
+                                <p>Presu. Emp</p>
+                                <p>Tec Prac Menc II</p>
+                                <p>Cont Bancaria</p>
+                                <p>Noc. De Audit</p>
                             </p>
                         </ul>
                     </div>
