--- a/pages/menciones/informatica.html
+++ b/pages/menciones/informatica.html
@@ -77,16 +77,22 @@
                         <p class="text-section">La clasificación de las materias impartidas en la mención informática son:</p>
                         <ul class="list-section">
                             <p>
-                                <b>4to año: </b
-                                ><!-- todo -->
+                                <b>4to año: </b>
+                                <p>Informática</p>
                             </p>
                             <p>
-                                <b>5to año: </b
-                                ><!-- todo -->
+                                <b>5to año: </b>
+                                <p>Informática II</p>
+                                <p>Práctica de Oficina</p>
+                                <p>Sistema de Información Gerencial</p>
+                                <p>Mantenimiento de Operaciones</p>
+                                <p>Algorítima y Programación I</p>
                             </p>
                             <p>
-                                <b>6to año: </b
-                                ><!-- todo -->
+                                <b>6to año: </b>
+                                <p>Algorítmica y Programación II</p>
+                                <p>Sistemas Operativos</p>
+                                <p>Estructura de Datos</p>
                             </p>
                         </ul>
                     </div>
