--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -79,16 +79,27 @@
                         <p class="text-section">La clasificación de las materias en la mención mecánica son:</p>
                         <ul class="list-section">
                             <p>
-                                <b>4to año: </b
-                                ><!-- todo -->
+                                <b>4to año: </b>
+                                <p>Dibujo Técnico</p>
+                                <p>Tecn. Mater.</p>
+                                <p>Elec. Refri.</p>
+                                <p>Ajuste Mec.</p>
+                                <p>Sold. Univer.</p>
                             </p>
                             <p>
-                                <b>5to año: </b
-                                ><!-- todo -->
+                                <b>5to año: </b>
+                                <p>Dibujo Técnico</p>
+                                <p>Física Aplicada</p>
+                                <p>Resist. Mat</p>
+                                <p>Mecánica de Mantenimiento</p>
                             </p>
                             <p>
-                                <b>6to año: </b
-                                ><!-- todo -->
+                                <b>6to año: </b>
+                                <p>Higiene y Seguridad Industrial</p>
+                                <p>Termodinámica</p>
+                                <p>Mecánica de los Fluidos</p>
+                                <p>Orient. F. CS. IND</p>
+                                <p>Tall. Esp. Menc.</p>
                             </p>
                         </ul>
                     </div>
