--- a/pages/menciones/minas.html
+++ b/pages/menciones/minas.html
@@ -77,16 +77,30 @@
                         <p class="text-section">La clasificación de las materias son:</p>
                         <ul class="list-section">
                             <p>
-                                <b>4to año: </b
-                                ><!-- todo -->
+                                <b>4to año: </b>
+                                <p>Geografia, Historia y Ciudadanía</p>
+                                <p>Form. P. Sob</p>
+                                <p>Geo. De Prod.</p>
+                                <p>Dib. Téc. Inf. I</p>
+                                <p>Int. Minería</p>
                             </p>
                             <p>
-                                <b>5to año: </b
-                                ><!-- todo -->
+                                <b>5to año: </b>
+                                <p>Vinc. Y Proc. S-E</p>
+                                <p>Dib. Téc. Inf. II</p>
+                                <p>Princ. Fís-Qui. Ap.</p>
+                                <p>Geo. Produc.</p>
+                                <p>Seg. Hig. Y Amb.</p>
+                                <p>Prin. Fís. Prod. M.</p>
                             </p>
                             <p>
-                                <b>6to año: </b
-                                ><!-- todo -->
+                                <b>6to año: </b>
+                                <p>Ecología y P. Amb.</p>
+                                <p>Org. Adm. Emp. M</p>
+                                <p>Hig. y Seg. Indust.</p>
+                                <p>Ana Fís-Quí</p>
+                                <p>Prod. Téc. Min-Ind.</p>
+                                <p>Ctrol. Prod. Min.</p>
                             </p>
                         </ul>
                     </div>
