--- a/pages/galeria/galeria.html
+++ b/pages/galeria/galeria.html
@@ -231,6 +231,9 @@
                                 <a href="#image18">
                                     <img src="/resources/images/slider_principal_2.jpg" alt="" class="gallery-img" />
                                 </a>
+                                <a href="#image19">
+                                    <img src="/resources/images/galeria/4to_informatica.jpg" alt="" class="gallery-img">
+                                </a>
                             </div>
                             <article class="light-box" id="image15">
                                 <a href="#image18" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
@@ -253,6 +256,12 @@
                             <article class="light-box" id="image18">
                                 <a href="#image17" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
                                 <img src="/resources/images/slider_principal_2.jpg" alt="">
+                                <a href="#image19" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
+                                <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
+                            </article>
+                            <article class="light-box" id="image19">
+                                <a href="#image18" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
+                                <img src="/resources/images/galeria/4to_informatica.jpg" alt="">
                                 <a href="#image15" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
