Resumen del Liceo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     <div class="text-resume">
-                        <p>El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica general y profesional.</p>
+                        <p>La Escuela Técnica Industrial Robinsoniana y Zamorana "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica general y profesional.</p>
                     </div>
                 </div>
                 <hr />
