--- a/pages/galeria/galeria.html
+++ b/pages/galeria/galeria.html
@@ -234,9 +234,18 @@
                                 <a href="#image19">
                                     <img src="/resources/images/galeria/4to_informatica.jpg" alt="" class="gallery-img">
                                 </a>
+                                <a href="#image20">
+                                    <img src="/resources/images/galeria/equipo_4to_mecanica.jpg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image21">
+                                    <img src="/resources/images/galeria/equipo_6to_informatica.jpg" alt="" class="gallery-img">
+                                </a>
+                                <a href="#image22">
+                                    <img src="/resources/images/galeria/exponentes_6to_informatica.jpg" alt="" class="gallery-img">
+                                </a>
                             </div>
                             <article class="light-box" id="image15">
-                                <a href="#image18" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
+                                <a href="#image22" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
                                 <img src="/resources/images/galeria/dia_alimentacion.jpg" alt="">
                                 <a href="#image16" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
@@ -262,6 +271,24 @@
                             <article class="light-box" id="image19">
                                 <a href="#image18" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
                                 <img src="/resources/images/galeria/4to_informatica.jpg" alt="">
+                                <a href="#image20" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
+                                <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
+                            </article>
+                            <article class="light-box" id="image20">
+                                <a href="#image19" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
+                                <img src="/resources/images/galeria/equipo_4to_mecanica.jpg" alt="">
+                                <a href="#image21" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
+                                <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
+                            </article>
+                            <article class="light-box" id="image21">
+                                <a href="#image20" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
+                                <img src="/resources/images/galeria/equipo_6to_informatica.jpg" alt="">
+                                <a href="#image22" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
+                                <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
+                            </article>
+                            <article class="light-box" id="image22">
+                                <a href="#image21" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
+                                <img src="/resources/images/galeria/exponentes_6to_informatica.jpg" alt="">
                                 <a href="#image15" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
