--- a/pages/galeria/galeria.html
+++ b/pages/galeria/galeria.html
@@ -243,52 +243,88 @@
                                 <a href="#image22">
                                     <img src="/resources/images/galeria/exponentes_6to_informatica.jpg" alt="" class="gallery-img">
                                 </a>
+                                <a href="#image23">
+                                    <img src="/resources/images/galeria/presentacion_6to_administracion.jpg" alt="" class="gallery-img">
+                                </a>
                             </div>
                             <article class="light-box" id="image15">
-                                <a href="#image22" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
-                                <img src="/resources/images/galeria/dia_alimentacion.jpg" alt="">
+                                <a href="#image23" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
+                                <div>
+                                    <h2 class="img-description">Celebración al Dia de la Alimentación en el Comedor de la Institución</h2>
+                                    <img src="/resources/images/galeria/dia_alimentacion.jpg" alt="">
+                                </div>
                                 <a href="#image16" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
                             <article class="light-box" id="image16">
                                 <a href="#image15" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
-                                <img src="/resources/images/galeria/mision_vision_valores.jpeg" alt="">
+                                <div>
+                                    <h2 class="img-description">Estudiantes de 1er Año 'C'</h2>
+                                    <img src="/resources/images/galeria/mision_vision_valores.jpeg" alt="">
+                                </div>
                                 <a href="#image17" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
                             <article class="light-box" id="image17">
                                 <a href="#image16" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
-                                <img src="/resources/images/galeria/simon_diaz.jpg" alt="">
+                                <div>
+                                    <h2 class="img-description">Dibujo en honor a Simón Díaz (Cantante venezolano)</h2>
+                                    <img src="/resources/images/galeria/simon_diaz.jpg" alt="">
+                                </div>
                                 <a href="#image18" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
                             <article class="light-box" id="image18">
                                 <a href="#image17" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
-                                <img src="/resources/images/slider_principal_2.jpg" alt="">
+                                <div>
+                                    <h2 class="img-description">Recreación de Educación Física en el Patio Central</h2>
+                                    <img src="/resources/images/slider_principal_2.jpg" alt="">
+                                </div>
                                 <a href="#image19" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
                             <article class="light-box" id="image19">
                                 <a href="#image18" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
-                                <img src="/resources/images/galeria/4to_informatica.jpg" alt="">
+                                <div>
+                                    <h2 class="img-description">Estudiantes de 4to de Informática en el Día de la Alimentación</h2>
+                                    <img src="/resources/images/galeria/4to_informatica.jpg" alt="">
+                                </div>
                                 <a href="#image20" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
                             <article class="light-box" id="image20">
                                 <a href="#image19" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
-                                <img src="/resources/images/galeria/equipo_4to_mecanica.jpg" alt="">
+                                <div>
+                                    <h2 class="img-description">4to Año de Mecánica, el día de la Presentación de Proyecto (30/11/2022)</h2>
+                                    <img src="/resources/images/galeria/equipo_4to_mecanica.jpg" alt="">
+                                </div>
                                 <a href="#image21" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
                             <article class="light-box" id="image21">
                                 <a href="#image20" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
-                                <img src="/resources/images/galeria/equipo_6to_informatica.jpg" alt="">
+                                <div class="">
+                                    <h2 class="img-description">6to Año de Informática (Creadores de la Página Web)</h2>
+                                    <img src="/resources/images/galeria/equipo_6to_informatica.jpg" alt="">
+                                </div>
                                 <a href="#image22" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
                             <article class="light-box" id="image22">
                                 <a href="#image21" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
-                                <img src="/resources/images/galeria/exponentes_6to_informatica.jpg" alt="">
+                                <div>
+                                    <h2 class="img-description">Ponentes de la Presentación de Proyecto de 6to Año de Informática (30/11/2022)</h2>
+                                    <img src="/resources/images/galeria/exponentes_6to_informatica.jpg" alt="">
+                                </div>
+                                <a href="#image23" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
+                                <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
+                            </article>
+                            <article class="light-box" id="image23">
+                                <a href="#image22" class="next"><img src="/resources/images/icons/left_arrow.svg" alt="" class="img-icon"></a>
+                                <div>
+                                    <h2 class="img-description">Presentación de Proyecto de 6to Año de Administración (30/11/2022)</h2>
+                                    <img src="/resources/images/galeria/presentacion_6to_administracion.jpg" alt="">
+                                </div>
                                 <a href="#image15" class="next"><img src="/resources/images/icons/right_arrow.svg" alt="" class="img-icon"></a>
                                 <a href="#" class="close"><img src="/resources/images/icons/close_icon.svg" alt="" class="img-icon"></a>
                             </article>
