"Icono de la página".
Se agregó la insignia como icono de la página.

Se cambió el titulo de la página principal.

--- a/pages/nosotros/mision_vision_valores.html
+++ b/pages/nosotros/mision_vision_valores.html
@@ -18,6 +18,7 @@
         <title>Misión, Visión y Valores - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/styles/styles.css" />
         <script src="/scripts/index.js" defer type="module"></script>
