--- a/pages/estructura/estructura_fisica.html
+++ b/pages/estructura/estructura_fisica.html
@@ -17,6 +17,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Estructura Física - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/styles/styles.css" />
