--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -16,6 +16,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mecánica - Jose Laurencio Silva</title>
+        <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
